0.0.7 - 
 * Use data-i18n-content in HTML tags to be HTML5 compliant

0.0.6 - 19 Feb 2012
 * Improved notifications mechanism

0.0.5 - 18 Feb 2012
 * Solve issue with erroneous opened tabs count on page refresh
 * Hide next / prev buttons if inactive on Deezer 

0.0.4 - 16 Feb 2012 
 * Added text to welcome page
 * Added notifications
 * Update cover size on popup style change
 * If no deezer tab is opened, a click on browser action opens one

0.0.3 - 07 Feb 2012
 * Set large popup style as default for new installs

0.0.2 - 05 Feb 2012

 * Initial revision 